Bug 261382 - invalidate :default pseudo-class changes on input elements
Summary: invalidate :default pseudo-class changes on input elements
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: CSS (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Cameron McCormack (:heycam)
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-09-09 20:58 PDT by Cameron McCormack (:heycam)
Modified: 2023-09-10 18:57 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Cameron McCormack (:heycam) 2023-09-09 20:58:33 PDT
.
Comment 1 Radar WebKit Bug Importer 2023-09-09 20:58:48 PDT
<rdar://problem/115236525>
Comment 2 Cameron McCormack (:heycam) 2023-09-09 21:06:10 PDT
Pull request: https://github.com/WebKit/WebKit/pull/17632
Comment 3 Cameron McCormack (:heycam) 2023-09-10 17:31:59 PDT
Submitted web-platform-tests pull request: https://github.com/web-platform-tests/wpt/pull/41903
Comment 4 EWS 2023-09-10 18:57:29 PDT
Committed 267848@main (ec255a8cd5cc): <https://commits.webkit.org/267848@main>

Reviewed commits have been landed. Closing PR #17632 and removing active labels.